--- a/css/main.css
+++ b/css/main.css
@@ -8,4 +8,67 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+li {
+  list-style-type: none;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background-color: #7998bc;
+  z-index: 1000000;
+}
+
+.navbar li {
+  display: inline-block;
+  text-transform: uppercase;
+  margin: 10px auto;
+}
+
+.navbar .sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 240px;
+  background-color: #fafcff;
+  z-index: 2000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px 10px;
+  display: none;
+}
+
+.navbar .sidebar img {
+  margin-bottom: 20px;
+}
+
+.navbar .sidebar li {
+  display: block;
+  text-transform: uppercase;
+  font-size: 20px;
+}
 /*# sourceMappingURL=main.css.map */
