--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,3 +11,73 @@ body {
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    list-style-type: none;
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col {
+    flex: 1;
+}
+
+
+
+
+
+
+// navbar
+.navbar {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    padding: 20px;
+    background-color: $medium-color;
+    z-index: 1000000;
+
+    ul {
+
+    }
+    
+    li {
+        display: inline-block;
+        text-transform: uppercase;
+        margin: 10px auto;
+    }
+
+
+    // sidbear
+    .sidebar {
+        position:fixed;
+        top:0;
+        bottom: 0;
+        left:0;
+        width: 240px;
+        background-color: $light-color;
+        z-index: 2000000;
+        box-sizing: border-box;
+        padding: 20px 10px;
+        display: none;
+
+        img {
+            margin-bottom: 20px;
+        }
+
+        li {
+            display: block;
+            text-transform: uppercase;
+            font-size: 20px;
+        }
+    }
+}
