--- a/scss/var.scss
+++ b/scss/var.scss
@@ -4,3 +4,6 @@ $primary-color: #dfe7f4;
 $light-color: #fafcff;
 $medium-color: #7998bc;
 $dark-color: #22304a;
+
+$first-color: #4679cc;
+$second-color: #46ccb3;
