--- a/scss/var.scss
+++ b/scss/var.scss
@@ -7,3 +7,5 @@ $dark-color: #22304a;
 
 $first-color: #4679cc;
 $second-color: #46ccb3;
+
+$shadow : 2px 2px 10px $medium-color , -5px -5px 10px $light-color;
