--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,17 @@
+* {
+  border: 1pt solid #22304a;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   background-color: #dfe7f4;
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #22304a;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -58,6 +62,12 @@ section {
           align-items: center;
 }
 
+.footer .row {
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
 .col {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -72,7 +82,7 @@ section {
   text-transform: uppercase;
   color: #dfe7f4;
   text-shadow: -1px -1px 2px #fafcff, 1px 1px 3px #7998bc;
-  font-size: 24px;
+  font-size: 32px;
   text-align: center;
 }
 
@@ -128,28 +138,82 @@ section {
   font-weight: bold;
 }
 
-.navbar .sidebar {
+.navbar .icon {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 5%;
+  top: 6px;
+  -webkit-transition: .8s;
+  transition: .8s;
+}
+
+.navbar .icon :hover {
+  cursor: pointer;
+}
+
+.navbar .icon span {
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  border-radius: 4px;
+  background-color: #fafcff;
+  -webkit-transition: .6s ease-in-out;
+  transition: .6s ease-in-out;
+}
+
+.navbar .icon span:nth-child(1) {
+  top: 3px;
+}
+
+.navbar .icon span:nth-child(2) {
+  top: 14px;
+}
+
+.navbar .icon span:nth-child(3) {
+  top: 26px;
+}
+
+.navbar .icon.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.navbar .icon.open span:nth-child(2) {
+  -webkit-transform: rotateX(-90deg);
+          transform: rotateX(-90deg);
+}
+
+.navbar .icon.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.sidebar {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
-  width: 240px;
+  width: 260px;
   background-color: #fafcff;
   z-index: 2000000;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 20px 10px;
-  display: none;
+  -webkit-transform: translateX(-270px) scaleX(0.1);
+          transform: translateX(-270px) scaleX(0.1);
 }
 
-.navbar .sidebar img {
+.sidebar img {
   margin-bottom: 20px;
 }
 
-.navbar .sidebar li {
+.sidebar li {
   display: block;
   text-transform: uppercase;
   font-size: 20px;
+  text-align: left;
 }
 
 .jumbotron {
@@ -167,7 +231,230 @@ section {
   text-transform: uppercase;
 }
 
-.tentang img {
+.tentang .col img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer img {
+  display: block;
   margin: 20px auto;
+}
+
+.footer ul.sosmed-menu {
+  display: block;
+  width: 100%;
+  margin: 10px auto;
+  text-align: center;
+}
+
+.footer .sosmed-item {
+  display: inline-block;
+  font-size: 28px;
+  color: white;
+  margin: 8px;
+  text-shadow: 2px 2px 10px #7998bc, -5px -5px 10px #fafcff;
+  -webkit-transition: .6s;
+  transition: .6s;
+}
+
+.footer .sosmed-item:hover {
+  text-shadow: none;
+}
+
+.footer .title-footer {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 22px;
+}
+
+.footer .col ul {
+  margin-left: -40px;
+}
+
+.footer footer {
+  position: relative;
+  padding: 10px;
+  margin-left: -61px;
+  margin-right: -61px;
+  text-align: center;
+  border-top: 2px solid #7998bc;
+}
+
+@media (max-width: 900px) {
+  .navbar ul {
+    display: none;
+  }
+  .navbar .icon {
+    display: block;
+  }
+  .container {
+    padding: 0px;
+  }
+  .tentang p {
+    min-width: 300px;
+  }
+  .footer .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-left: 10px;
+  }
+  .footer .row ul.sosmed-menu {
+    width: 80%;
+  }
+  .footer .row ul.sosmed-menu .sosmed-item {
+    font-size: 18px;
+  }
+  footer {
+    margin: 0px;
+    font-size: 12px;
+  }
+}
+
+.tentang p, .tentang img, .jurusan .card-style, .fasilitas .card-style {
+  opacity: 0;
+}
+
+@-webkit-keyframes sidebarAppear {
+  60% {
+    -webkit-transform: translateX(20px) scaleX(1.2);
+            transform: translateX(20px) scaleX(1.2);
+  }
+  85% {
+    -webkit-transform: translateX(-12px) scaleX(0.97);
+            transform: translateX(-12px) scaleX(0.97);
+  }
+  93% {
+    -webkit-transform: translateX(6px) scaleX(1);
+            transform: translateX(6px) scaleX(1);
+  }
+  100% {
+    -webkit-transform: translateX(0px) scaleX(1);
+            transform: translateX(0px) scaleX(1);
+  }
+}
+
+@keyframes sidebarAppear {
+  60% {
+    -webkit-transform: translateX(20px) scaleX(1.2);
+            transform: translateX(20px) scaleX(1.2);
+  }
+  85% {
+    -webkit-transform: translateX(-12px) scaleX(0.97);
+            transform: translateX(-12px) scaleX(0.97);
+  }
+  93% {
+    -webkit-transform: translateX(6px) scaleX(1);
+            transform: translateX(6px) scaleX(1);
+  }
+  100% {
+    -webkit-transform: translateX(0px) scaleX(1);
+            transform: translateX(0px) scaleX(1);
+  }
+}
+
+@-webkit-keyframes sidebarHidden {
+  0% {
+    -webkit-transform: translateX(0px) scaleX(1);
+            transform: translateX(0px) scaleX(1);
+  }
+  100% {
+    -webkit-transform: translateX(-260px);
+            transform: translateX(-260px);
+  }
+}
+
+@keyframes sidebarHidden {
+  0% {
+    -webkit-transform: translateX(0px) scaleX(1);
+            transform: translateX(0px) scaleX(1);
+  }
+  100% {
+    -webkit-transform: translateX(-260px);
+            transform: translateX(-260px);
+  }
+}
+
+@-webkit-keyframes landingLeft {
+  0% {
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+    opacity: 0;
+  }
+  100% {
+    transfrom: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes landingLeft {
+  0% {
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+    opacity: 0;
+  }
+  100% {
+    transfrom: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes landingRight {
+  0% {
+    -webkit-transform: translateX(80px);
+            transform: translateX(80px);
+    opacity: 0;
+  }
+  100% {
+    transfrom: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes landingRight {
+  0% {
+    -webkit-transform: translateX(80px);
+            transform: translateX(80px);
+    opacity: 0;
+  }
+  100% {
+    transfrom: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes landingTop {
+  0% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes landingTop {
+  0% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=main.css.map */
